veecle-os-runtime-macros/tests/ui/actor/missing_lifetime.stderr
error: lifetimes on actor arguments must be anonymous or static
  --> tests/ui/actor/missing_lifetime.rs:21:40
   |
21 |     _reader: veecle_os_runtime::Reader<'b, Sensor>,
   |                                        ^^

error[E0106]: missing lifetime specifier
 --> tests/ui/actor/missing_lifetime.rs:5:55
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
  |                                                       ^^^^^^ expected named lifetime parameter
  |
help: consider using the `'__dont_use_internal_actor_macro_lifetime` lifetime
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader<'__dont_use_internal_actor_macro_lifetime>) -> veecle_os_runtime::Never {
  |                                                             +++++++++++++++++++++++++++++++++++++++++++

error[E0726]: implicit elided lifetime not allowed here
 --> tests/ui/actor/missing_lifetime.rs:5:36
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ expected lifetime parameter
  |
help: indicate the anonymous lifetime
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader<'_>) -> veecle_os_runtime::Never {
  |                                                             ++++

error[E0106]: missing lifetime specifier
  --> tests/ui/actor/missing_lifetime.rs:10:56
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                                        ^^^^^^ expected named lifetime parameter
   |
help: consider using the `'__dont_use_internal_actor_macro_lifetime` lifetime
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader<'__dont_use_internal_actor_macro_lifetime>) -> veecle_os_runtime::Never {
   |                                                              +++++++++++++++++++++++++++++++++++++++++++

error[E0726]: implicit elided lifetime not allowed here
  --> tests/ui/actor/missing_lifetime.rs:10:37
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader<'_>) -> veecle_os_runtime::Never {
   |                                                              ++++

error[E0106]: missing lifetime specifier
  --> tests/ui/actor/missing_lifetime.rs:15:62
   |
15 | async fn macro_test_actor3(_reader: veecle_os_runtime::Reader<Sensor>) -> veecle_os_runtime::Never {
   |                                                              ^ expected named lifetime parameter
   |
help: consider using the `'__dont_use_internal_actor_macro_lifetime` lifetime
   |
15 | async fn macro_test_actor3(_reader: veecle_os_runtime::Reader<'__dont_use_internal_actor_macro_lifetime, Sensor>) -> veecle_os_runtime::Never {
   |                                                               ++++++++++++++++++++++++++++++++++++++++++

error[E0726]: implicit elided lifetime not allowed here
  --> tests/ui/actor/missing_lifetime.rs:15:37
   |
15 | async fn macro_test_actor3(_reader: veecle_os_runtime::Reader<Sensor>) -> veecle_os_runtime::Never {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
15 | async fn macro_test_actor3(_reader: veecle_os_runtime::Reader<'_, Sensor>) -> veecle_os_runtime::Never {
   |                                                               +++

error[E0106]: missing lifetime specifier
  --> tests/ui/actor/missing_lifetime.rs:27:56
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                                        ^^^^^^ expected named lifetime parameter
   |
help: consider using the `'__dont_use_internal_actor_macro_lifetime` lifetime
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader<'__dont_use_internal_actor_macro_lifetime>) -> veecle_os_runtime::Never {
   |                                                              +++++++++++++++++++++++++++++++++++++++++++

error[E0726]: implicit elided lifetime not allowed here
  --> tests/ui/actor/missing_lifetime.rs:27:37
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader<'_>) -> veecle_os_runtime::Never {
   |                                                              ++++

error[E0107]: missing generics for struct `Reader`
 --> tests/ui/actor/missing_lifetime.rs:5:55
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
  |                                                       ^^^^^^ expected 1 generic argument
  |
note: struct defined here, with 1 generic parameter: `T`
 --> $WORKSPACE/veecle-os-runtime/src/datastore/reader.rs
  |
  | pub struct Reader<'a, T>
  |            ^^^^^^     -
help: add missing generic argument
  |
5 | async fn macro_test_actor(_reader: veecle_os_runtime::Reader<T>) -> veecle_os_runtime::Never {
  |                                                             +++

error[E0107]: missing generics for struct `Reader`
  --> tests/ui/actor/missing_lifetime.rs:10:56
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                                        ^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $WORKSPACE/veecle-os-runtime/src/datastore/reader.rs
   |
   | pub struct Reader<'a, T>
   |            ^^^^^^     -
help: add missing generic argument
   |
10 | async fn macro_test_actor2(_reader: veecle_os_runtime::Reader<T>) -> veecle_os_runtime::Never {
   |                                                              +++

error[E0107]: missing generics for struct `Reader`
  --> tests/ui/actor/missing_lifetime.rs:27:56
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader) -> veecle_os_runtime::Never {
   |                                                        ^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $WORKSPACE/veecle-os-runtime/src/datastore/reader.rs
   |
   | pub struct Reader<'a, T>
   |            ^^^^^^     -
help: add missing generic argument
   |
27 | async fn macro_test_actor5(_reader: veecle_os_runtime::Reader<T>) -> veecle_os_runtime::Never {
   |                                                              +++
